--- a/Numeral Types and Type Conversion/Numeral Types and Type Conversion/05.Experiments/05.Experiments.csproj
+++ b/Numeral Types and Type Conversion/Numeral Types and Type Conversion/05.Experiments/05.Experiments.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5EA192B1-2B83-4FA1-9BF6-E0A3F3A2F955}</ProjectGuid>
+    <ProjectGuid>{314F9AFB-1DFA-4DF1-9885-FD4E5CC7E739}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_04.Transport</RootNamespace>
-    <AssemblyName>04.Transport</AssemblyName>
+    <RootNamespace>_05.Experiments</RootNamespace>
+    <AssemblyName>05.Experiments</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
